# meddiagnose-ml

./: .gitignore  README.md  pyproject.toml
ml/inference/: confidence_scorer.py  image_preprocessor.py  medgemma_client.py
ml/prompts/: __init__.py  general_clinical.py  pathology.py  radiology.py
