[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meddiagnose-ml"
version = "0.1.0"
description = "MedDiagnose ML inference library (MedGemma, Vertex AI, confidence scoring)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["ml*"]
